--- a/web_scraping_1.Rmd
+++ b/web_scraping_1.Rmd
@@ -108,3 +108,48 @@ dynamite_df
 
 ```
 
+## APIs
+
+Get some NYC water consumption from API
+
+```{r}
+nyc_water = 
+  GET("https://data.cityofnewyork.us/resource/ia2d-e54m.csv") %>% 
+  content("parsed")
+```
+
+Let's see what JSON looks like...
+
+```{r}
+nyc_water_json = 
+  GET("https://data.cityofnewyork.us/resource/ia2d-e54m.json") %>%
+  content("text") %>% 
+  jsonlite::fromJSON() %>% 
+  as_tibble()
+
+nyc_water_json
+```
+
+We're going to try another example using data from BRFSS.
+
+```{r}
+brfss_smart2010 = 
+  GET("https://chronicdata.cdc.gov/resource/acme-vg9e.csv",
+      query = list("$limit" = 5000)) %>% 
+  content("parsed")
+
+brfss_smart2010
+```
+
+One last example using Pokemon API -- this stuff is not nicely formatted.
+
+```{r}
+poke_data = 
+  GET("http://pokeapi.co/api/v2/pokemon/1") %>%
+  content()
+
+poke_data$name
+
+poke_data$abilities
+```
+
