--- a/strings_and_factors.Rmd
+++ b/strings_and_factors.Rmd
@@ -192,3 +192,74 @@ marj_df %>%
 ```
 
 Note that neither color is in order from least to greatest; uses the median.
+
+## Restaurant inspections
+
+```{r}
+data("rest_inspec")
+rest_inspec
+```
+
+```{r}
+rest_inspec = rest_inspec %>% 
+  filter(
+    str_detect(grade, "[ABC]"),
+    !(boro == "Missing")) %>% 
+    mutate(
+      boro = str_to_title(boro)
+    )
+
+rest_inspec %>% 
+  janitor::tabyl(boro, grade)
+```
+
+```{r}
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>% 
+  janitor::tabyl(boro, grade)
+```
+
+```{r}
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro)
+  ) %>% 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar() 
+```
+
+Suppose I wanted to change one of my factor labels:
+
+```{r}
+# Wrong
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    # Converts from a factor back to a string, so reverts to alphabetical order instead of fct in freq
+    boro = str_replace(boro, "Manhattan", "The City")
+  ) %>% 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar() 
+
+# Also wrong
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    boro = replace(boro, which(boro == "Manhattan"), "The City")) %>%
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+
+# Right way!
+rest_inspec %>% 
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    boro = fct_recode(boro, "The City" = "Manhattan")
+    ) %>%
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
